Fixed the alignment of the maps and the tile provider to hopefully make tings faster.

--- a/src/assets/containers.css
+++ b/src/assets/containers.css
@@ -36,6 +36,7 @@
   background: #f7f7f7ff;
   display: flex;
   align-items: stretch;
+  justify-content: space-between;
   flex-direction: row;
 }
 
@@ -55,6 +56,7 @@
   border-color: #a0a0a0ff;
   min-height: 200px;
   width: auto;
+  max-width: 50%;
   margin: 2%;
   padding: .5%;
   box-shadow: 2px 5px 5px #888888;
